2008-02-25 David Moore  <dcm@acm.org>
	* SVN 544: Fix the debug log handler so it produces output.

2008-02-21 David Moore  <dcm@acm.org>
	* SVN 543: Correct the order of operations at the start of juju
	           capture so that any manual channel settings are preserved.

2008-02-12 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 542: Return an error if the camera enumeration fails (thanks to
	           Jasper Leemans)

2008-02-10 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 541: Corrections in the man pages white spaces
	* SVN 540: Added man pages to make install and to make dist

2008-02-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 539: Add linux functions to get port and node. This is
	           provided by a new header file linux/control.h
	
2008-02-06 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 538: Documentation problems with newer Doxygen package:
		- Changed Doxygen.in to fit the new standards.
		- Added man pages to the examples for easier packaging.
		- Changed the Release number to 2.0.2 to make it ready
		  for the next release.
		- Changes in *.h to fit the new documentation standards.
		- Added Andrew Straw to the list of Authors for his
		  contribution to packaging, man pages, etc.

2008-01-15 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 537: Release 2.0.1
	
2008-01-14 David Moore  <dcm@acm.org>
	* SVN 536: Updated NEWS.
	* SVN 535: Removed edge-sense bayer algorithm.  Removed the
		   now-obsolete --without-patents option.

2008-01-12 David Moore  <dcm@acm.org>
	* SVN 534: Fixed some Mac OS compile warnings.
	* SVN 533: Removed internal-only includes from dc1394.h and added
		   missing includes to other source files.

2008-01-09 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 532: added Doxyfile.in to the Makefile.am EXTRA_DIST for
		inclussion in the packaging.

2008-01-09 Damien Douxchamps http://damien.douxchamps.net/